@@ -48,5 +48,6 @@ extern int leer_socket(int s, char *buffer, int longitud);
 extern void escribir_socket_format (int misocket, const char * format , ...);
 extern int assignar_adr_internet(int sock,char *host,unsigned short n_port);
 extern int connectar_socket(int s,struct sockaddr_in *adr);
+extern int cerrar_socket(int s);
 
 #endif
