@@ -6,6 +6,7 @@ Added ZRCP commands:
 -get-snapshot: get a ZSF snapshot from ZRCP
 -put-snapshot: put a ZSF snapshot from ZRCP
 -send-keys-event: simulates key press/release
+-test-tcp-connect: testing tcp connection
 
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
